tests/agl/rejections/scope/break_in_lambda_in_loop.agl
var n: int = 0
do
  n := n + 1
  let f = fn() -> unit => break
  if n >= 3 => break
done
